# Icons8-Collector

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml  user-support.yml
icons8_collector/: __init__.py  auth.py  cli.py  client.py  converter.py  downloader.py  exceptions.py  logging_config.py  main.py  scraper.py
src/icons8_collector/: __init__.py  auth.py  cli.py  client.py  converter.py  logging_config.py  scraper.py
tests/: __init__.py  test_cli.py  test_client.py  test_converter.py
