[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "icons8-collector"
version = "2.0.0"
description = "A production-grade CLI tool to download icons from Icons8 collections"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "nameIess"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Utilities",
]
keywords = ["icons8", "icons", "downloader", "cli", "scraper"]

dependencies = [
    "requests>=2.28.0,<3.0.0",
    "pillow>=9.0.0",
    "playwright>=1.40.0,<2.0.0",
    "tenacity>=8.0.0,<9.0.0",
    "colorama>=0.4.6,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<9.0.0",
    "pytest-mock>=3.10.0,<4.0.0",
    "responses>=0.23.0,<1.0.0",
]

[project.scripts]
icons8-collector = "icons8_collector.cli:main"
icons8 = "icons8_collector.cli:main"

[project.urls]
Homepage = "https://github.com/nameIess/Icons8-Collector"
Repository = "https://github.com/nameIess/Icons8-Collector"

[tool.setuptools.packages.find]
where = ["src"]
include = ["icons8_collector*"]
